# gpt_query_gen

./: .gitignore  Cargo.toml  Procfile  README.md  package-lock.json  package.json
client/: package-lock.json  package.json  rollup.config.js
client/src/: App.svelte  Chat.svelte  Home.svelte  main.js
src/: cprs.sh  db.rs  main.rs  models.rs  routes.rs
