[package]
name = "lowband_portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "sqlite", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
openai_api_rust = "0.1.8"
serde = "1.0.181"
serde_derive = "1.0.181"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "sqlite"]}
tokio = { version = "1.29.1", features = ["full"]}
